<resources>
    <string name="app_name">InClass</string>
    <string name="add_Button">Add</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="back_button">Back</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="group">Group:</string>
</resources>