<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewContactActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameInput" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/emailInput"
        app:layout_constraintEnd_toStartOf="@+id/emailInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/textViewPhones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="@+id/phonesInput"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toTopOf="@+id/phonesInput" />

    <TextView
        android:id="@+id/textViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        app:layout_constraintBottom_toBottomOf="@+id/groupInput"
        app:layout_constraintStart_toStartOf="@+id/textViewPhones"
        app:layout_constraintTop_toTopOf="@+id/groupInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="Ex: Seamus Beecher"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Ex: email@email.com"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/nameInput"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <EditText
        android:id="@+id/phonesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Ex: 999-999-9999"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/groupInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Ex: Home, Office or Cell"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/phonesInput"
        app:layout_constraintStart_toStartOf="@+id/phonesInput"
        app:layout_constraintTop_toBottomOf="@+id/phonesInput" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButtonNew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButtonNew" />

    <Button
        android:id="@+id/cancelButtonNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupInput"
        app:layout_constraintVertical_bias="0.381" />

</androidx.constraintlayout.widget.ConstraintLayout>
