<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContactActivity">

    <TextView
        android:id="@+id/textViewNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/editNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editNameInput" />

    <EditText
        android:id="@+id/editNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="Ex: Seamus Beecher"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmailEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/editEmailInput"
        app:layout_constraintEnd_toStartOf="@+id/editEmailInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNameEdit"
        app:layout_constraintTop_toTopOf="@+id/editEmailInput" />

    <EditText
        android:id="@+id/editEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Ex: email@email.com"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editNameInput"
        app:layout_constraintStart_toStartOf="@+id/editNameInput"
        app:layout_constraintTop_toBottomOf="@+id/editNameInput" />

    <TextView
        android:id="@+id/textViewPhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintBottom_toBottomOf="@+id/editPhoneInput"
        app:layout_constraintStart_toStartOf="@+id/textViewEmailEdit"
        app:layout_constraintTop_toTopOf="@+id/editPhoneInput" />

    <EditText
        android:id="@+id/editPhoneInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Ex: 999-999-9999"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editEmailInput"
        app:layout_constraintStart_toStartOf="@+id/editEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/editEmailInput" />

    <TextView
        android:id="@+id/textViewGroupEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        app:layout_constraintBottom_toBottomOf="@+id/editGroupInput"
        app:layout_constraintStart_toStartOf="@+id/textViewPhoneEdit"
        app:layout_constraintTop_toTopOf="@+id/editGroupInput" />

    <EditText
        android:id="@+id/editGroupInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Ex: Home, Office or Cell"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editPhoneInput"
        app:layout_constraintStart_toStartOf="@+id/editPhoneInput"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneInput" />

    <Button
        android:id="@+id/updateButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:text="@string/update_button"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButtonEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButtonEdit" />

    <Button
        android:id="@+id/cancelButtonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGroupInput"
        app:layout_constraintVertical_bias="0.384" />

</androidx.constraintlayout.widget.ConstraintLayout>